3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/arch.c: Add 'unlocked' match for item_matched_string.
lib/help/drop, lib/help/dropall: Help files for these commands.
lib/Makefile.in: Update to include help commands above.
server/spell_effect.c: Fix formatting of summon_pet() function.  Modified so
   that it no longers sucks player spellpoints when casting it via scroll -
   scrolls should not cast the player spellpoints.  No idea why that code was
   there - in fact, casting off a scroll used more sp than casting from
   memory.  Modify cast_cause_disease() function so that if the passed
   direction is 0, we refer to the facing and cast in that direction - this
   means spells of cause disease now work.  Also perform some minor formatting
   changes in the function.
TODO: Add not about inscription.
MSW 2002-07-05

common/arch.c:  Fix bug in item_matched_string which was matching all
  values (inverse in fact) when passed with count > 1 in matching
  string - missing ! operator.
README: Update - remove note about windows client, since it is currently
  unsupported and could stop working in some future release.
MSW 2002-07-05

------------------------------------------------------------------------------
Changes for 1.3.0:

socket/request.c: If players were using the original map command with
  an even map size, server would try to send too much data to client -
  checking in server would result in an abort.  Modify code to now properly
  send right number of spaces.
lib/Makefile.in: remove extraneous / in front of motd entry in file list.
include/version.h: Update for version 1.3.0
Makefile.in: Update for version 1.3.0
lib/archetypes: rebuilt.
MSW 2002-07-01
